# advanced-ascii-renderer

./: Cargo.toml  README.md  cli.rs  main.rs
aar/: Cargo.toml
aar-cli/: Cargo.toml
aar-cli/src/: cli.rs  main.rs  terminal.rs
aar/src/: args.rs  ffutils.rs  lib.rs  textifier.rs  video.rs
aar/src/textifier/: cpu.rs  gpu.rs  text.rs  types.rs
benches/: bench.rs
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  textifier.rs  video.rs
lib/src/textifier/: lines.rs  shader.wgsl  text.rs  types.rs
src/: cli.rs  ffutils.rs  lib.rs  main.rs  terminal.rs  textifier.rs  video.rs
src/processing/: cpu.rs  gpu.rs  image.rs  mod.rs  shader.wgsl  terminal.rs  text.rs
src/textifier/: cpu.rs  gpu.rs  lines.rs  shader.wgsl  text.rs  types.rs
tests/: test.rs
