[package]
name = "aar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
lto = "fat"
panic = "abort"


# [unstable]
# build-std = ["std", "panic_abort"]
# build-std-features = ["panic_immediate_abort"]
[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
bytemuck = "1.18.0"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.28.1"
ctrlc = "3.4.5"
flume = "0.11.0"
image = "0.24.8"
pollster = "0.4.0"
wgpu = "23.0.1"
