[package]
name = "aar"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"] # cdylib for wasm; lib for native

# [profile.release]
# strip = "debuginfo"
# lto = "fat"
# panic = "abort"

[dependencies]
bytemuck = "1.24.0"
flume = "0.11.1"
image = "0.25.8"
pollster = "0.4.0"
wgpu = { version = "27.0.1", features = ["webgl"] }
