[package]
name = "aar_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"] # cdylib for wasm; lib for native

[profile.release]
strip = "debuginfo"
lto = "fat"
panic = "abort"


# [unstable]
# build-std = ["std", "panic_abort"]
# build-std-features = ["panic_immediate_abort"]

[dependencies]
bytemuck = "1.18.0"
flume = "0.11.0"
image = "0.24.8"
pollster = "0.4.0"
wgpu = "23.0.1"
